--- a/config.json
+++ b/config.json
@@ -6,5 +6,12 @@
   "owners": [
     123456789,
     987654321
-  ]
+  ],
+  "DATABASE": "sqlite3",
+
+  "DB_HOST": "127.0.0.1",
+  "DB_PORT": 3306,
+  "DB_USER": "root",
+  "DB_PASSWORD": "",
+  "DB_NAME": "bot"
 }
