--- a/config.json
+++ b/config.json
@@ -1,11 +1,4 @@
 {
-  "prefix": "YOUR_BOT_PREFIX_HERE",
-  "token": "YOUR_BOT_TOKEN_HERE",
-  "permissions": "YOUR_BOT_PERMISSIONS_HERE",
-  "application_id": "YOUR_APPLICATION_ID_HERE",
-  "sync_commands_globally": false,
-  "owners": [
-    123456789,
-    987654321
-  ]
+	"prefix": "YOUR_BOT_PREFIX_HERE",
+	"invite_link": "YOUR_BOT_INVITE_LINK_HERE"
 }
